@@ -1,7 +1,8 @@
 2004-06-08  John Luke  <jluke@cfl.rr.com>
 
 	* JavaBindingCompilerService.cs: rework so Process.Start works
-	for the compiler, for a normal error message
+	* JavaBindingExecutionService.cs: rework so Process.Start works
+	by using ProcessStartInfo (cmd, args)
 
 2004-05-25  Todd Berman  <tberman@sevenl.net>
 
